--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js", 
+    "dev": "nodemon app.js", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Your Name",
   "license": "ISC",
-  "description": "",
+  "description": "A Node.js project for managing Airbnb listings using Express, MongoDB, and Handlebars.",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-handlebars": "^8.0.1",
+    "hbs": "^4.2.0",
     "joi": "^17.13.3",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
