--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.1",
     "joi": "^17.13.3",
+    "method-override": "^3.0.0",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.4"
   }
